# POCO-tcp-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
app/: main.cpp
app/server/: Server.cpp  Server.h  SimpleHandler.cpp  SimpleHandler.h
